<resources>
    <string name="app_name">Spotify (by Travis Mosley)</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_result_artist_image_description">Artist Image</string>
    <string name="artist_detail_activity_label">Artist Detail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artist_name_default">Pink Floyd</string>
    <string name="artist_genre_list_default">Classic Rock, Rock</string>
    <string name="artist_followers_default">123215 Followers</string>
    <string name="album_name_default">A Momentary Lapse of Reason</string>
    <string name="song_name_default">Learning To Fly</string>

    <string name="INTENT_EXTRA_ARTIST">intent_extra_artist</string>
</resources>
